<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ForPets</string>

    <!-- 앱바 -->
    <string name="transport_moving_list_appbar">이동 중인 아이들</string>
    <string name="req_appbar">봉사요청 등록</string>
    <string name="vol_appbar">봉사자 등록</string>
    <string name="transport_lists_appbar">국 내</string>
    <string name="adopt_detail_appbar">상세정보</string>
    <string name="login_appbar">로그인</string>
    <string name="signup_appbar">회원가입</string>

    <!-- BottomNavigationView -->
    <string name="transport">이동봉사</string>
    <string name="adopt">입양</string>
    <string name="chat">채팅</string>
    <string name="profile">나의 정보</string>

    <!-- 여러 화면에서 사용되는 string -->
    <string name="all_post_title">제목을 입력해 주세요</string>
    <string name="all_calendar_hint">출발일</string>
    <string name="all_animal_choice">동물 선택</string>
    <string name="all_all_animal">모두 가능</string>
    <string name="all_from">출발 지역</string>
    <string name="all_to">도착 지역</string>
    <string name="all_my_pet">우리 아이는</string>
    <string name="all_name">이름 :</string>
    <string name="all_photo_count">&lt; %d / 5 &gt;</string>
    <string name="all_character_caution">특징 및 주의사항 :</string>
    <string name="all_message">봉사자에게 전하고 싶은 말 :</string>
    <string name="all_happen_date">접수일자 :</string>
    <string name="all_happen_place">발견장소 :</string>
    <string name="all_kind">품종 :</string>
    <string name="all_color">색상 :</string>
    <string name="all_age">나이 :</string>
    <string name="all_weight">체중 :</string>
    <string name="all_notice_no">공고번호 :</string>
    <string name="all_process_state">상태 :</string>
    <string name="all_sex">성별 :</string>
    <string name="all_neuter_yn">중성화여부 :</string>
    <string name="all_care_nm">보호소 이름 :</string>
    <string name="all_care_tel">보호소 전화번호 :</string>
    <string name="all_care_addr">보호장소 :</string>
    <string name="all_charge_nm">담당자 :</string>
    <string name="all_office_tel">담당자 연락처 :</string>
    <string name="all_chat">대화하기</string>
    <string name="all_req_list">봉사요청 목록</string>
    <string name="all_vol_list">봉사자 목록</string>
    <string name="all_fab_transport_req">봉사요청 등록하기</string>
    <string name="all_fab_transport_vol">봉사자 등록하기</string>
    <string name="all_fab_transport_req_desc">봉사요청 글 작성을 위한 버튼입니다</string>
    <string name="all_fab_transport_vol_desc">봉사자 등록 글 작성을 위한 버튼입니다</string>
    <string name="all_btn_post">등 록</string>
    <string name="all_abandonment_image_desc">함께할 가족을 찾고 있는 유기동물의 사진입니다</string>
    <string name="all_til_password_hint">비밀번호</string>
    <string name="all_til_email_hint">이메일</string>

    <!-- 이동봉사 화면 -->
    <string name="transport_mbtg_request">요청자</string>
    <string name="transport_mbtg_volunteer">봉사자</string>
    <string name="transport_dialog_title">가족이 되어 주세요!</string>
    <string name="transport_dialog_message">오늘의 구조 : 202마리\n이동 봉사 : 5건 (누적 18건)</string>
    <string name="transport_dialog_confirm_btn">입양하러 가기</string>
    <string name="transport_dialog_cancel_btn">취소</string>
    <string name="transport_tv_abroad_title">해외봉사</string>
    <string name="transport_tv_moving_title">이동중</string>
    <string name="transport_iv_paw_desc">오늘 구조된 동물과 현재까지 누적된 이동봉사 수를 보여주는 버튼입니다</string>
    <string name="transport_ib_abroad_desc">해외봉사 목록 화면으로 이동하는 버튼입니다</string>
    <string name="transport_tv_moving_desc">이동봉사 목록 화면으로 이동하는 버튼입니다</string>

    <!-- 이동중 목록 화면 -->
    <string name="transport_moving_list_siv_image_desc">이동 중인 아이의 사진입니다</string>
    <string name="transport_moving_list_tv_associate_label">보호자</string>

    <!-- 봉사요청 목록 화면 -->
    <string name="req_list_tv_name_label">이름</string>
    <string name="req_list_tv_departure_date_label">출발일</string>
    <string name="req_list_tv_journey_label">여정</string>
    <string name="req_list_siv_image_desc">이동봉사자 분을 기다리고 있는 동물의 사진입니다</string>

    <!-- 봉사자 등록 화면 -->
    <string name="vol_til_from_detail_hint">상세 출발 지역</string>
    <string name="vol_til_from_detail_helper" tools:ignore="TypographyEllipsis">가능하신 출발 지역들 모두 입력해 주세요</string>
    <string name="vol_til_to_detail_hint">상세 도착 지역</string>
    <string name="vol_til_to_detail_helper" tools:ignore="TypographyEllipsis">가능하신 도착 지역들 모두 입력해 주세요</string>
    <string name="vol_til_message_hint">봉사 또는 일정 등 알려주실 사항을 남겨주세요!!</string>

    <!-- 봉사자 목록 화면 -->
    <string name="vol_list_tv_possible_day">가능일</string>
    <string name="vol_list_tv_from">출발지역</string>
    <string name="vol_list_tv_to">도착지역</string>

    <!-- 데이트 피커 -->
    <string name="date_picker_icon_desc">출발일을 선택할 수 있는 캘린더 아이콘입니다</string>
    <string name="date_picker_title">시작일 - 종료일</string>

    <!-- Bottom Sheet -->
    <string name="bottom_title">지역 선택</string>
    <string name="bottom_county_hint">시/도</string>
    <string name="bottom_district_hint">시/군/구</string>
    <string name="bottom_btn_input">입력하기</string>

    <!-- 입양 목록 화면 -->
    <string name="adopt_tv_fallback">잠시 후에 다시 돌아와 주세요!</string>
    <string name="adopt_tv_region_label">지역 :</string>

    <!-- 입양 상세화면 -->
    <string name="adopt_detail_tv_special_mark_title">- 특징 및 특이사항 -</string>
    <string name="adopt_detail_btn_care">보호소 전화하기</string>
    <string name="adopt_detail_btn_charge">담당자 전화하기</string>

    <!-- 나의 정보 화면 -->
    <string name="profile_btn_login">로그인</string>

    <!-- 로그인 화면 -->
    <string name="login_tv_signup"><u>아직 회원이 아니신가요?</u></string>
    <string name="login_tv_signup_organization"><u>단체/보호소로 가입하기</u></string>
    <string name="login_tv_find_id">아이디 찾기</string>
    <string name="login_tv_find_password">비밀번호 찾기</string>
    <string name="login_tv_signup1">회원가입</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_toast_not_found">사용자가 존재하지 않거나 비밀번호가 일치하지 않습니다!</string>
    <string name="login_toast_server_error">사용자 확인 실패! (서버 오류)</string>
    <string name="login_toast_network_error">사용자 확인 실패! (네트워크 오류)</string>
    <string name="login_toast_welcome">환영합니다! %1$s님</string>
    <string name="login_snack_bar_login_fail">아이디 및 비밀번호를 확인해 주세요!</string>

    <!--회원가입 화면-->
    <string name="sign_up_tv_title">회원가입</string>
    <string name="sign_up_til_email_helper">이메일 주소로 가입할 수 있습니다</string>
    <string name="sign_up_btn_send_auth_code">인증번호 전송</string>
    <string name="sign_up_btn_authenticate">인증하기</string>
    <string name="sign_up_btn_complete_auth">인증완료</string>
    <string name="sign_up_btn_check_duplicate">중복 확인하기</string>
    <string name="sign_up_auth_code_hint">인증번호 입력</string>
    <string name="sign_up_cert">인증하기</string>
    <string name="sign_up_confirm_password_hint">비밀번호 확인</string>
    <string name="sign_up_nickname_hint">닉네임</string>
    <string name="sign_up_til_nickname_helper">문자 또는 문자와 숫자로 이루어진 2음절 이상만 가능합니다</string>
    <string name="login_til_phone">휴대폰 번호</string>
    <string name="sign_up_btn_sign_up">가입하기</string>
    <string name="sign_up_til_password_helper">6글자 이상 입력해주세요</string>
    <string name="sign_up_toast_exist_email">이미 존재하는 이메일입니다</string>
    <string name="sign_up_toast_guide_password">비밀번호는 6자리 이상입니다</string>
    <string name="sign_up_toast_guide_email">이메일 형식으로 입력하세요</string>
    <string name="sign_up_email_error_message">올바른 이메일 주소를 입력해 주세요!</string>
    <string name="sign_up_email_transport_complete">인증번호가 전송되었습니다!</string>
    <string name="sign_up_auth_code_not_valid">인증번호를 확인해 주세요!</string>
    <string name="sign_up_email_title">포페츠 회원가입 인증번호입니다.</string>
    <string name="sign_up_email_message">\n\n안녕하세요. 포페츠입니다!\n\n아래의 인증번호를 인증창에 입력해주세요.\n\n인증번호 : %s</string>
    <string name="sign_up_btn_verify_nickname">중복 확인하기</string>
    <string name="sign_up_nickname_error_message">이미 존재하는 닉네임입니다. 다른 닉네임을 입력해 주세요!</string>
    <string name="sign_up_btn_available_nickname">사용가능</string>
    <string name="sign_up_til_password_helper_message">영문자 + 숫자 + 특수문자 8자리 이상 입력해 주세요</string>
    <string name="sign_up_til_password_error_message">비밀번호를 확인해 주세요!</string>
    <string name="sign_up_til_password_check_helper_verified_password_message">비밀번호 확인!</string>
    <string name="sign_up_snackbar_welcome">환영합니다! 회원가입을 해주셔서 감사합니다!</string>
    <string name="sign_up_snackbar_fail">회원가입에 실패하였습니다. 다시 시도해 주세요!</string>

</resources>