<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignUpIndividualFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/all_til_email_hint"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/sign_up_til_email_helper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_auth_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/selector_button_background_color"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/sign_up_btn_send_auth_code"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/til_email"
            app:layout_constraintTop_toBottomOf="@id/til_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_input_auth_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/sign_up_auth_code_hint"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_send_auth_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_input_auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_authenticate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/selector_button_background_color"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/sign_up_btn_authenticate"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/til_input_auth_code"
            app:layout_constraintTop_toBottomOf="@id/til_input_auth_code" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_completed_auth"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/sign_up_btn_complete_auth"
            android:textColor="@color/white"
            android:visibility="gone"
            app:icon="@drawable/ic_check"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/til_input_auth_code"
            app:layout_constraintTop_toBottomOf="@id/til_input_auth_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/sign_up_nickname_hint"
            app:endIconMode="clear_text"
            app:helperText="@string/sign_up_til_nickname_helper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_input_auth_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify_nickname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:backgroundTint="@color/selector_button_background_color"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/sign_up_btn_verify_nickname"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/til_nickname"
            app:layout_constraintTop_toBottomOf="@id/til_nickname" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verified_nickname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/sign_up_btn_available_nickname"
            android:textColor="@color/white"
            android:visibility="gone"
            app:icon="@drawable/ic_check"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/til_nickname"
            app:layout_constraintTop_toBottomOf="@id/til_nickname" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:hint="@string/all_til_password_hint"
            app:endIconMode="password_toggle"
            app:helperText="@string/sign_up_til_password_helper_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_nickname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_check_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/sign_up_confirm_password_hint"
            app:boxStrokeErrorColor="@android:color/holo_green_dark"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_check"
            app:errorIconTint="@android:color/holo_green_dark"
            app:errorTextColor="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_check_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="13dp"
            android:backgroundTint="@color/selector_button_background_color"
            android:clickable="false"
            android:enabled="false"
            android:padding="15dp"
            android:text="@string/sign_up_btn_sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_check_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>