<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.transport.TransportVolFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                style="?attr/textInputFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/all_post_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_50"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/all_calendar_hint"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom"
                app:layout_constraintEnd_toStartOf="@id/til_animal"
                app:layout_constraintStart_toStartOf="@id/til_title"
                app:layout_constraintTop_toBottomOf="@id/til_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:padding="18dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_animal"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="16dp"
                android:hint="@string/all_animal_choice"
                app:layout_constraintEnd_toEndOf="@id/til_title"
                app:layout_constraintStart_toEndOf="@id/til_date"
                app:layout_constraintTop_toBottomOf="@id/til_title">

                <AutoCompleteTextView
                    android:id="@+id/actv_animal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/vol_animal_choice"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/all_from"
                app:helperText="@string/vol_til_from_detail_helper"
                app:layout_constraintEnd_toEndOf="@id/til_animal"
                app:layout_constraintStart_toStartOf="@id/til_date"
                app:layout_constraintTop_toBottomOf="@id/til_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:padding="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/all_to"
                app:helperText="@string/vol_til_to_detail_helper"
                app:layout_constraintEnd_toEndOf="@id/til_animal"
                app:layout_constraintStart_toStartOf="@id/til_from"
                app:layout_constraintTop_toBottomOf="@id/til_from">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:padding="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:hint="@string/vol_til_message_hint"
                app:layout_constraintEnd_toEndOf="@id/til_to"
                app:layout_constraintStart_toStartOf="@id/til_to"
                app:layout_constraintTop_toBottomOf="@id/til_to">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/selector_button_background_color"
        android:clickable="false"
        android:enabled="false"
        android:padding="15dp"
        android:text="@string/all_btn_post"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nsv" />

</androidx.constraintlayout.widget.ConstraintLayout>