<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transport.TransportFragment">

    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mbtg_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <Button
            android:id="@+id/mbtg_request"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport_mbtg_request" />

        <Button
            android:id="@+id/mbtg_volunteer"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport_mbtg_volunteer" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efab_transport_req"
        style="@style/Pet_Fab_Color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/all_fab_transport_req_desc"
        android:text="@string/all_fab_transport_req"
        app:icon="@drawable/ic_fab_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
    <!--        android:id="@+id/efab_transport_vol"-->
    <!--        style="@style/Fab"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="16dp"-->
    <!--        android:contentDescription="@string/fab_transport_req_desc"-->
    <!--        android:text="@string/fab_transport_vol"-->
    <!--        app:icon="@drawable/ic_fab_create"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>